--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
   <h1>Welcome to Git</h1>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum, harum consectetur dolorem voluptas cumque illum temporibus, doloremque illo laborum debitis voluptatum nesciunt, nulla rerum odit? Quaerat saepe corrupti fugiat illum.</p>
 </body>
 </html>
