added list in html file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
   <h1>Welcome to Git</h1>
-  <a href="https://google.com">Google.com</a>
+  <a href="https://google.in">Google.in</a>
+  <ul>
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>Item 3</li>
+    <li>Item 4</li>
+    <li>Item 5</li>
+  </ul>
 </body>
 </html>
