--- a/about.html
+++ b/about.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About us</title>
-</head>
-<body>
-  <h1>About us</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About us</title>
+  </head>
+  <body>
+    <h1>About us</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae
+      culpa, esse illo assumenda vero cumque a praesentium fugit exercitationem
+      nesciunt pariatur ea doloribus rem molestiae. Eveniet labore fugit
+      suscipit assumenda?
+    </p>
+  </body>
 </html>
