added full stop to the p tag

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae
       culpa, esse illo assumenda vero cumque a praesentium fugit exercitationem
       nesciunt pariatur ea doloribus rem molestiae. Eveniet labore fugit
-      suscipit assumenda?
+      suscipit assumenda?.
     </p>
   </body>
 </html>
