added ignore file

--- a/about.html
+++ b/about.html
@@ -13,5 +13,11 @@
       nesciunt pariatur ea doloribus rem molestiae. Eveniet labore fugit
       suscipit assumenda?.
     </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+      repudiandae in voluptate eius harum neque obcaecati nostrum unde? Autem
+      vero cumque doloribus veniam corrupti distinctio adipisci omnis non
+      obcaecati ratione!
+    </p>
   </body>
 </html>
