--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to Git</title>
-</head>
-<body>
-  <h1>Welcome to Git</h1>
-  <a href="https://google.in">Google.in</a>
-  <ul>
-    <li>Item 1</li>
-    <li>Item 2</li>
-    <li>Item 3</li>
-    <li>Item 4</li>
-    <li>Item 5</li>
-  </ul>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Welcome to Git</title>
+  </head>
+  <body>
+    <h1>Welcome to Git</h1>
+    <a href="https://google.in">Google.in</a>
+    <ul>
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+      <li>Item 4</li>
+      <li>Item 5</li>
+    </ul>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est laboriosam,
+      alias eos nulla maiores aliquam porro, itaque nam necessitatibus qui ab,
+      quo eum. Dignissimos est ducimus voluptatem. Eius, dolores temporibus!
+    </p>
+    <span>This is the span tag</span>
+  </body>
 </html>
