added a paragraph into users file

--- a/admin/users.html
+++ b/admin/users.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Users Management</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Users Management</title>
+  </head>
+  <body>
     <h1>User mamagement</h1>
-  <p>Welcome to user management</p>
-</body>
+    <p>Welcome to user management</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, culpa
+      tempora ut assumenda et dignissimos delectus ducimus molestiae vitae modi
+      quam autem adipisci, provident harum. Asperiores eligendi saepe similique
+      soluta!
+    </p>
+  </body>
 </html>
