Updated role file in admin panel
Added a paragraph in the roles html file in admin panel

--- a/admin/roles.html
+++ b/admin/roles.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RBAC</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>RBAC</title>
+  </head>
+  <body>
     <h1>RBAC</h1>
-</body>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae,
+      eveniet beatae repellendus, et quae illo, quos exercitationem facere rerum
+      cum vitae delectus repudiandae libero amet dolor quis distinctio nihil!
+      Explicabo!
+    </p>
+  </body>
 </html>
